<resources>
    <string name="app_name">Hillfort</string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="button_deleteHillfort">Delete</string>

    <string name="button_updatePassword">  Update Password </string>
    <string name="button_addImage">  Add Image </string>
    <string name="hillfort_visited">  visited </string>
    <string name="button_location">Set Location</string>
    <string name="menu_addHillfort">Save</string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="hint_hillfortDescription">Description </string>
    <string name="hint_hillfortNotes">Additonal Notes</string>
    <string name="enter_hillfort_title"> Please enter a Hillfort Title </string>
    <string name="change_hillfort_image">Change hillfort image</string>
    <string name="save_hillfort"> Save Hillfort</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="menu_deleteHillfort">Delete</string>
    <string name="menu_about">About Us</string>
    <string name="title_activity_map"> Map </string>
    <string name="addImage"> Click the buttons to add images </string>


    <string name="hillfortNumberVisited">Number of hillforts Visited</string>
    <string name="hillfortNumber">Number of hillforts</string>
    <string name="login_unsuccessful1">Please enter a email or password</string>
    <string name="login_unsuccessful">login unsuccessful</string>
    <string name="register_successful">Registration successful</string>
    <string name="login_username">Email</string>
    <string name="login_password">Password</string>
    <string name="button_login"> Login </string>
    <string name="login_register"> Register Here </string>
    <string name="button_register"> Register </string>
    <string name="enter_register_detail"> Please fill out both fields</string>
    <string name="menu_mapup"> UP </string>
    <string name="latString"> Latitude: </string>
    <string name="longString"> Longitude: </string>
    <string name="visitedString"> Visited </string>
    <string name="date"> Date Visited:</string>
    <string name="title_activity_hillfort_maps">Map of all Hillforts</string>
    <string name="hillfort_favourite">Favourite</string>
    <string name="hillfort_favourites">Show Favourites</string>
    <string name="hillfort_rating">Rating</string>
    <string name="hillfort_search">Search</string>
    <string name="hillfort_showall">Show All</string>

    <string name="hillfort_image_placeholder">Hillfort Image</string>
    <string name="hillfort_title_placeholder">Hillfort Title</string>
    <string name="hillfort_description_placeholder">Hillfort Description</string>


    <string name="title_activity_hillfort_list">Hillforts</string>
    <string name="title_activity_hillfort_favourites">Hillforts</string>
    <string name="title_activity_hillfort">Hillfort</string>
    <string name="title_activity_edit_location">Hillfort</string>

    <string name="title_activity_login"> Signup/Login to Hillfort</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add</string>
    <string name="menu_home">Home</string>
    <string name="buttonSearch">Search</string>
</resources>
