<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_favourites"
        android:title="@string/hillfort_favourite"
        android:icon="@drawable/favourite_icon"
        android:iconTint="@color/black"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_home"
        android:title="@string/menu_home"
        android:icon="@drawable/home"
        android:iconTint="@color/black"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/search_icon"
        android:iconTint="@color/black"
        app:showAsAction="always"/>

</menu>