<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/change_hillfort_image" />

        <TextView
            android:id="@+id/hillfortTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textColor="@color/black"
            android:layout_toEndOf="@+id/imageIcon"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_below="@id/hillfortTitle"
            android:layout_toEndOf="@+id/imageIcon"/>

        <TextView
            android:id="@+id/latString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latString"
            android:textColor="@color/black"
            android:paddingTop="3dp"
            android:layout_below="@id/description" />

        <TextView
            android:id="@+id/lat1"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/latString"
            android:layout_marginTop="0dp"
            android:paddingTop="3dp" />

        <TextView
            android:id="@+id/longString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longString"
            android:textColor="@color/black"
            android:paddingTop="3dp"
            android:layout_below="@id/lat1" />

        <TextView
            android:id="@+id/lang"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/longString" />

        <TextView
            android:id="@+id/visitedString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitedString"
            android:textColor="@color/black"
            android:paddingTop="3dp"
            android:layout_below="@id/lang" />


        <CheckBox
            android:id="@+id/visited"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/visitedString" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>